--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <!-- Putting nav tag instead of division to identify the navigation bar section. -->
-        <nav>
+        <div>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,7 +24,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </nav>
+        </div>
     </section>
     <div class="hero"></div>
     <div class="content">
